# podium

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
changes/: 65.feature.md  65.misc.md  65.removal.md  90.misc.rst  91.doc.md
docs/: config.yml  mkdocs.en.yml
docs/en/: SUMMARY.md  index.md
docs/en/about/: demos.md  index.md  releases.md  roadmap.md  why.md
docs/en/how-to/: index.md  watermark.md
docs/en/reference/: index.md
docs/en/tutorial/: index.md
examples/example.podium/: slides.md
src/podium/: __main__.py  app.py  deck.py
src/podium/resources/: remark.js
