[build-system]
requires = [
    "setuptools==82.0.1",
    "setuptools_scm==9.2.2",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "podium"
requires-python = ">=3.12"
# Temporary workaround for beeware/toga#4446
dependencies = ["packaging"]

[dependency-groups]
# Extras used by developers *of* briefcase are pinned to specific versions to
# ensure environment consistency.
pre-commit = [
    "pre-commit == 4.6.0",
]

setuptools-scm = [
    "setuptools_scm == 10.0.5",
]

towncrier = [
    "towncrier == 25.8.0",
]

tox-uv = [
    "tox-uv == 1.35.2",
]

dev = [
    {include-group = "pre-commit"},
    {include-group = "setuptools-scm"},
    {include-group = "tox-uv"},
]

test = [
    {include-group = "setuptools-scm"},
]

docs = [
   "beeware-docs-tools @ git+https://github.com/beeware/beeware-docs-tools",
#     "beeware-docs-tools @ file://../beeware-docs-tools",
]

[tool.briefcase]
project_name = "Podium"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
bundle = "org.beeware"
author = 'Russell Keith-Magee'
author_email = 'russell@keith-magee.com'
homepage = 'https://podium.beeware.org'

[tool.briefcase.app.podium]
formal_name = "Podium"
description = "A presentation tool for developers."
long_description = """A slide presentation tool.

It is focussed on developer needs, using Markdown as a slide format.
"""
sources = ["src/podium"]
icon = "icons/podium"

[tool.briefcase.app.podium.document_type.deck]
description = "Podium Slide Deck"
extension = "podium"
icon = "icons/podium-deck"
url = 'https://podium.beeware.org'
macOS.UTTypeConformsTo = ["com.apple.package", "public.content"]

[tool.briefcase.app.podium.macOS]
requires = [
    "toga-cocoa==0.5.4",
    "std-nslog==1.0.1",
]

[tool.briefcase.app.podium.linux]
requires = [
    "toga-gtk==0.5.4"
]

[tool.briefcase.app.podium.linux.system.debian]
system_requires = [
    # Needed to compile pycairo wheel
    "libcairo2-dev",
    "libgirepository-2.0-dev",
]

system_runtime_requires = [
    # Needed to provide GTK and its GI bindings
    "gir1.2-gtk-3.0",
    "libgirepository-2.0-0",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3-module",
    # Needed to provide WebKit2 at runtime
    # Note: Debian 11 requires gir1.2-webkit2-4.0 instead
    "gir1.2-webkit2-4.1",
]

[tool.briefcase.app.podium.linux.system.rhel]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
]

system_runtime_requires = [
    # Needed to support Python bindings to GTK
    "gobject-introspection",
    # Needed to provide GTK
    "gtk3",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3",
    # Needed to provide WebKit2 at runtime
    "webkit2gtk4.1",
]

[tool.briefcase.app.podium.linux.system.suse]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
]

system_runtime_requires = [
    # Needed to provide GTK
    "gtk3",
    # Needed to support Python bindings to GTK
    "gobject-introspection", "typelib(Gtk) = 3.0",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3-module",
    # Needed to provide WebKit2 at runtime
    "libwebkit2gtk3", "typelib(WebKit2)",
]

[tool.briefcase.app.podium.linux.system.arch]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo",
    # Needed to compile PyGObject wheel
    "gobject-introspection",
    # Runtime dependencies that need to exist so that the
    # Arch package passes final validation.
    # Needed to provide GTK
    "gtk3",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
    # Needed to provide WebKit2
    "webkit2gtk",
]

system_runtime_requires = [
    # Needed to provide GTK
    "gtk3",
    # Needed to provide PyGObject bindings
    "gobject-introspection-runtime",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
    # Needed to provide WebKit2 at runtime
    "webkit2gtk",
]

[tool.briefcase.app.podium.linux.appimage]
supported = false

[tool.briefcase.app.podium.linux.flatpak]
flatpak_runtime = "org.gnome.Platform"
flatpak_runtime_version = "48"
flatpak_sdk = "org.gnome.Sdk"

[tool.briefcase.app.podium.windows]
requires = [
    "toga-winforms==0.5.4"
]

[tool.briefcase.app.podium.iOS]
supported = false

[tool.briefcase.app.podium.android]
supported = false

[tool.briefcase.app.podium.web]
supported = false

[tool.ruff.lint]
# In addition to the default rules, these additional rules will be used:
extend-select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "I",      # isort
    # The SIM rules are *very* opinionated, and don't necessarily make for better code.
    # They may be worth occasionally turning on just to see if something could actually
    # use improvement.
    # "SIM",    # flake8-simplify
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.rumdl]
flavor = "mkdocs"
include = ["**/*.md"]
exclude = [
    "comment.md",
    "CODE_OF_CONDUCT.md",
    "examples/example.podium/slides.md",
    "changes/*.md",
]
respect-gitignore = true

# Disable rules:
# MD014: Forces commands in codeblocks to show output
# MD033: No inline HTML
disable = [
    "MD014",
    "MD033",
]

[tool.rumdl.per-file-ignores]

[tool.rumdl.MD013]  # Line length
line_length = 999999
reflow = true
reflow_mode = "normalize"

[tool.rumdl.MD026]  # Remove punctuation at the end of headings
punctuation = ",;:"

[tool.rumdl.MD061]  # Fail on certain strings.
terms = ["TODO"]

[tool.setuptools_scm]
# To enable SCM versioning, we need an empty tool configuration for setuptools_scm

[tool.towncrier]
directory = "changes"
package = "podium"
package_dir = "src"
filename = "docs/en/about/releases.md"
title_format = "## {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/beeware/briefcase/issues/{issue})"
template = "changes/template.md"
type = [
    { directory = "feature", name = "Features", showcontent = true },
    { directory = "bugfix", name = "Bugfixes", showcontent = true },
    { directory = "removal", name = "Backward Incompatible Changes", showcontent = true },
    { directory = "doc", name = "Documentation", showcontent = true },
    { directory = "misc", name = "Misc", showcontent = false },
]
